--- a/WitcheryResurrectedWeb/WitcheryResurrectedWeb.csproj
+++ b/WitcheryResurrectedWeb/WitcheryResurrectedWeb.csproj
@@ -28,4 +28,8 @@
       <_ContentIncludedByDefault Remove="wwwroot\lib\bootstrap\LICENSE" />
     </ItemGroup>
 
+    <ItemGroup>
+      <PackageReference Include="Discord.Net" Version="2.4.0" />
+    </ItemGroup>
+
 </Project>
