--- a/WitcheryResurrectedWeb/ClientApp/package.json
+++ b/WitcheryResurrectedWeb/ClientApp/package.json
@@ -1,32 +1,21 @@
 {
   "name": "witchery-resurrected",
   "version": "0.1.0",
-  "private": true,
-  "dependencies": {
-    "@material-ui/core": "^4.12.1",
-    "@material-ui/icons": "^4.11.2",
-    "@testing-library/jest-dom": "^5.11.4",
-    "@testing-library/react": "^11.1.0",
-    "@testing-library/user-event": "^12.1.10",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-infinite-scroller": "^1.2.4",
-    "react-router": "^5.2.0",
-    "react-router-dom": "^5.2.0",
-    "react-scripts": "4.0.3",
-    "web-vitals": "^1.0.1"
-  },
+  "description": "Witchery: Resurrected aims to recreate and improve the popular Witchery Minecraft mod in modern versions; with a focus on customizability.",
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
-  "eslintConfig": {
-    "extends": [
-      "react-app",
-      "react-app/jest"
-    ]
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/WitcheryResurrected/WitcheryResurrectedWeb.git"
+  },
+  "author": "msrandom",
+  "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/WitcheryResurrected/WitcheryResurrectedWeb/issues"
   },
   "browserslist": {
     "production": [
@@ -39,5 +28,19 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "keywords": [],
+  "dependencies": {
+    "@uiw/react-md-editor": "^3.6.4",
+    "query-string": "^7.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-router-dom": "^5.3.0",
+    "react-scripts": "^4.0.3"
+  },
+  "devDependencies": {
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-standard": "^16.0.3"
   }
 }
