--- a/WitcheryResurrectedWeb/ClientApp/package.json
+++ b/WitcheryResurrectedWeb/ClientApp/package.json
@@ -3,10 +3,8 @@
   "version": "0.1.0",
   "description": "Witchery: Resurrected aims to recreate and improve the popular Witchery Minecraft mod in modern versions; with a focus on customizability.",
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "dev": "react-scripts start",
+    "build": "react-scripts build"
   },
   "repository": {
     "type": "git",
@@ -31,16 +29,14 @@
   },
   "keywords": [],
   "dependencies": {
-    "@uiw/react-md-editor": "^3.6.4",
-    "query-string": "^7.0.1",
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "eslint": "^7.32.0",
+    "eslint-config-react-app": "^6.0.0",
+    "eslint-config-standard": "^16.0.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.3.0",
-    "react-scripts": "^4.0.3"
-  },
-  "devDependencies": {
-    "eslint": "^7.32.0",
-    "eslint-config-react-app": "^6.0.0",
-    "eslint-config-standard": "^16.0.3"
+    "react-scripts": "^5.0.1"
   }
 }
