--- a/WitcheryResurrectedWeb/WitcheryResurrectedWeb.csproj
+++ b/WitcheryResurrectedWeb/WitcheryResurrectedWeb.csproj
@@ -13,6 +13,10 @@
     <ItemGroup>
         <PackageReference Include="Discord.Net" Version="3.8.1" />
         <PackageReference Include="Discord.Net.Webhook" Version="3.8.1" />
+        <PackageReference Include="EFCore.NamingConventions" Version="6.0.0" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.10" />
+        <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="6.0.10" />
     </ItemGroup>
 
     <ItemGroup>
