--- a/WitcheryResurrectedWeb/ClientApp/package.json
+++ b/WitcheryResurrectedWeb/ClientApp/package.json
@@ -37,6 +37,7 @@
     "@types/react": "^18.0.24",
     "@types/react-dom": "^18.0.8",
     "@vitejs/plugin-react": "^2.2.0",
+    "autoprefixer": "^10.4.13",
     "eslint": "^8.14.0",
     "eslint-config-react-app": "^7.0.1",
     "eslint-config-standard": "^17.0.0",
