Keep only front-end

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "witchery-resurrected",
+  "name": "witchery-resurrected-web",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
